feat(i18n): add Hindi translations for visualizer and fix UI issues
- Add visualizer-specific translations (comparing, swapping, sorted)
- Fix element preview to wrap properly
- Auto-update bars on Random click
- Update Footer with correct GitHub repo link

--- a/src/i18n/messages/en.json
+++ b/src/i18n/messages/en.json
@@ -30,7 +30,12 @@
     "speed": "Speed",
     "slow": "Slow",
     "normal": "Normal",
-    "fast": "Fast"
+    "fast": "Fast",
+    "step": "Step",
+    "total": "Total",
+    "playing": "Playing",
+    "finished": "Finished",
+    "ready": "Ready"
   },
   "input": {
     "customInput": "Custom Input",
@@ -38,7 +43,25 @@
     "placeholder": "Enter values...",
     "validate": "Validate",
     "clear": "Clear",
-    "example": "Example"
+    "example": "Example",
+    "inputArray": "Input Array",
+    "random": "Random",
+    "applyAndRun": "Apply & Run",
+    "elements": "elements"
+  },
+  "visualizer": {
+    "subtitle": "Select an algorithm and watch it come to life with step-by-step animations",
+    "selectAlgorithm": "Select Algorithm",
+    "comparing": "Comparing",
+    "swapping": "Swapping",
+    "sorted": "Sorted",
+    "comparisons": "Comparisons",
+    "swaps": "Swaps",
+    "complexity": "Complexity",
+    "timeBest": "Time (Best)",
+    "timeAvg": "Time (Avg)",
+    "timeWorst": "Time (Worst)",
+    "space": "Space"
   },
   "common": {
     "loading": "Loading...",
