feat(content): restructure topics page and update global translations
- Revamp `TopicsPage` to categorize algorithms by difficulty (Beginner, Intermediate, Advanced, Expert).
- Add new algorithm entries (e.g., Interpolation Search, Priority Queue, Segment Tree) to the topic lists.
- Update `Header` to include a navigation link to the new Playground.
- Update i18n JSON files with translations for the new topic categories and navigation items.

--- a/src/i18n/messages/en.json
+++ b/src/i18n/messages/en.json
@@ -9,17 +9,24 @@
     "topics": "Topics",
     "visualize": "Visualize",
     "learn": "Learn",
-    "practice": "Practice"
+    "practice": "Practice",
+    "playground": "Playground"
   },
   "topics": {
+    "arrays": "Arrays",
+    "strings": "Strings",
     "sorting": "Sorting",
     "searching": "Searching",
-    "graphs": "Graphs",
-    "trees": "Trees",
-    "stacks": "Stacks & Queues",
+    "stacks": "Stacks",
+    "queues": "Queues",
     "linkedLists": "Linked Lists",
+    "recursion": "Recursion",
+    "trees": "Trees",
     "heaps": "Heaps",
-    "dynamicProgramming": "Dynamic Programming"
+    "hashing": "Hashing",
+    "graphs": "Graphs",
+    "dynamicProgramming": "Dynamic Programming",
+    "greedy": "Greedy Algorithms"
   },
   "player": {
     "play": "Play",
