--- a/src/i18n/messages/hi.json
+++ b/src/i18n/messages/hi.json
@@ -101,5 +101,195 @@
         "description": "पूर्ण i18n सपोर्ट के साथ अपनी पसंदीदा भाषा में सीखें"
       }
     }
+  },
+  "pages": {
+    "contact": {
+      "title": "संपर्क करें",
+      "subtitle": "Algo Arcade Lab के बारे में कोई सवाल है? हमें आपसे सुनना अच्छा लगेगा। हमें एक संदेश भेजें और हम जल्द से जल्द जवाब देंगे।",
+      "formTitle": "हमें एक संदेश भेजें",
+      "firstName": "पहला नाम",
+      "lastName": "उपनाम",
+      "email": "ईमेल पता",
+      "subject": "विषय",
+      "message": "संदेश",
+      "sendButton": "संदेश भेजें",
+      "contactInfo": "संपर्क जानकारी",
+      "emailLabel": "ईमेल",
+      "locationLabel": "स्थान",
+      "location": "भारत",
+      "responseTime": "प्रतिक्रिया समय",
+      "responseTimeText": "हम आमतौर पर 24-48 घंटों के भीतर जवाब देते हैं",
+      "quickHelp": "त्वरित सहायता चाहिए?",
+      "quickHelpText": "मूल्य निर्धारण, सुविधाओं और शुरू करने के बारे में सामान्य प्रश्नों के उत्तर के लिए हमारा FAQ अनुभाग देखें।",
+      "visitFaq": "FAQ अनुभाग देखें"
+    },
+    "privacy": {
+      "title": "गोपनीयता नीति",
+      "lastUpdated": "अंतिम अपडेट: जनवरी 2026",
+      "infoCollect": "हम कौन सी जानकारी एकत्र करते हैं",
+      "infoCollectText": "हम वह जानकारी एकत्र करते हैं जो आप सीधे हमें प्रदान करते हैं, जिसमें शामिल हैं:",
+      "infoCollectItems": [
+        "खाता जानकारी (नाम, ईमेल पता)",
+        "भुगतान जानकारी (Stripe/Razorpay के माध्यम से सुरक्षित रूप से संसाधित)",
+        "उपयोग डेटा और प्राथमिकताएं",
+        "आपके द्वारा हमें भेजी गई संचार"
+      ],
+      "howWeUse": "हम आपकी जानकारी का उपयोग कैसे करते हैं",
+      "howWeUseText": "हम एकत्रित जानकारी का उपयोग इसके लिए करते हैं:",
+      "howWeUseItems": [
+        "हमारी सेवाएं प्रदान करना, बनाए रखना और सुधारना",
+        "लेनदेन संसाधित करना और संबंधित जानकारी भेजना",
+        "आपको तकनीकी सूचनाएं और सहायता संदेश भेजना",
+        "आपकी टिप्पणियों और प्रश्नों का जवाब देना",
+        "उपयोगकर्ता अनुभव को बेहतर बनाने के लिए उपयोग पैटर्न का विश्लेषण करना"
+      ],
+      "dataSecurity": "डेटा सुरक्षा",
+      "dataSecurityText": "हम आपकी व्यक्तिगत जानकारी को अनधिकृत पहुंच, परिवर्तन, प्रकटीकरण या विनाश से बचाने के लिए उचित सुरक्षा उपाय लागू करते हैं। इसमें शामिल हैं:",
+      "dataSecurityItems": [
+        "ट्रांजिट और रेस्ट में संवेदनशील डेटा का एन्क्रिप्शन",
+        "नियमित सुरक्षा मूल्यांकन और अपडेट",
+        "कर्मचारियों द्वारा व्यक्तिगत जानकारी तक सीमित पहुंच",
+        "प्रमाणित प्रदाताओं के माध्यम से सुरक्षित भुगतान प्रसंस्करण"
+      ],
+      "yourRights": "आपके अधिकार",
+      "yourRightsText": "आपको निम्नलिखित का अधिकार है:",
+      "yourRightsItems": [
+        "अपनी व्यक्तिगत जानकारी तक पहुंच",
+        "गलत या अधूरे डेटा को सही करना",
+        "अपने डेटा को हटाने का अनुरोध करना",
+        "अपने डेटा के प्रसंस्करण पर आपत्ति करना",
+        "डेटा पोर्टेबिलिटी"
+      ],
+      "cookies": "कुकीज़ और ट्रैकिंग",
+      "cookiesText": "हम आपके अनुभव को बढ़ाने, उपयोग पैटर्न का विश्लेषण करने और व्यक्तिगत सामग्री प्रदान करने के लिए कुकीज़ और समान तकनीकों का उपयोग करते हैं। आप अपनी ब्राउज़र सेटिंग्स के माध्यम से कुकी प्राथमिकताओं को नियंत्रित कर सकते हैं।",
+      "dataRetention": "डेटा प्रतिधारण",
+      "dataRetentionText": "हम आपकी व्यक्तिगत जानकारी को तब तक बनाए रखते हैं जब तक आपका खाता सक्रिय है या आपको सेवाएं प्रदान करने के लिए आवश्यक है। हम कानूनी दायित्वों का पालन करने और विवादों को हल करने के लिए आवश्यक होने पर आपकी जानकारी को भी बनाए रखेंगे और उपयोग करेंगे।",
+      "contactUs": "हमसे संपर्क करें",
+      "contactUsText": "यदि आपको इस गोपनीयता नीति के बारे में कोई प्रश्न है, तो कृपया हमसे संपर्क करें:",
+      "contactEmail": "privacy@algoarcadelab.com"
+    },
+    "terms": {
+      "title": "सेवा की शर्तें",
+      "lastUpdated": "अंतिम अपडेट: जनवरी 2026",
+      "acceptance": "1. शर्तों की स्वीकृति",
+      "acceptanceText": "Algo Arcade Lab का उपयोग या पहुंच करके, आप इन सेवा की शर्तों और सभी लागू कानूनों और विनियमों का पालन करने के लिए सहमत होते हैं। यदि आप इनमें से किसी भी शर्त से सहमत नहीं हैं, तो आपको इस प्लेटफॉर्म का उपयोग करने या एक्सेस करने की अनुमति नहीं है।",
+      "account": "2. खाता और भुगतान",
+      "accountText": "जब आप खाता बनाते हैं या खरीदारी करते हैं, तो आप सहमत होते हैं:",
+      "accountItems": [
+        "सटीक और पूर्ण जानकारी प्रदान करना",
+        "अपने खाता क्रेडेंशियल्स की सुरक्षा बनाए रखना",
+        "अपने खाते के तहत सभी गतिविधियों की जिम्मेदारी स्वीकार करना",
+        "अपने खाते की पहुंच दूसरों के साथ साझा नहीं करना"
+      ],
+      "accountNote": "सभी भुगतान हमारे भुगतान भागीदारों (Stripe/Razorpay) के माध्यम से सुरक्षित रूप से संसाधित किए जाते हैं। पूर्ण पहुंच एक बार का भुगतान है जो सभी सुविधाओं तक आजीवन पहुंच प्रदान करता है।",
+      "license": "3. लाइसेंस और उपयोग अधिकार",
+      "licenseText": "खरीद पर, आपको एक गैर-विशेष, गैर-हस्तांतरणीय लाइसेंस दिया जाता है:",
+      "licenseItems": [
+        "सभी एल्गोरिदम विज़ुअलाइज़ेशन और शैक्षिक सामग्री तक पहुंच और उपयोग करना",
+        "व्यक्तिगत सीखने और अभ्यास के लिए कोड प्लेग्राउंड का उपयोग करना",
+        "बिना किसी अतिरिक्त लागत के भविष्य के अपडेट और नए एल्गोरिदम तक पहुंच"
+      ],
+      "licenseNotText": "आप ऐसा नहीं कर सकते:",
+      "licenseNotItems": [
+        "प्लेटफॉर्म तक पहुंच को पुनर्वितरित, पुनर्विक्रय या उप-लाइसेंस करना",
+        "वाणिज्यिक उद्देश्यों के लिए सामग्री की प्रतिलिपि बनाना या पुन: प्रस्तुत करना",
+        "खाता क्रेडेंशियल्स या पहुंच दूसरों के साथ साझा करना",
+        "स्रोत कोड को रिवर्स इंजीनियर या निकालने का प्रयास करना"
+      ],
+      "prohibited": "4. निषिद्ध आचरण",
+      "prohibitedText": "आप निम्नलिखित में से किसी में भी शामिल न होने के लिए सहमत होते हैं:",
+      "prohibitedItems": [
+        "किसी भी लागू कानून या विनियम का उल्लंघन करना",
+        "हमारे सिस्टम तक अनधिकृत पहुंच प्राप्त करने का प्रयास करना",
+        "प्लेटफॉर्म के संचालन में हस्तक्षेप या व्यवधान करना",
+        "दुर्भावनापूर्ण कोड या सामग्री अपलोड करना",
+        "अन्य उपयोगकर्ताओं को परेशान करना या उनका प्रतिरूपण करना",
+        "बिना अनुमति के प्लेटफॉर्म तक पहुंचने के लिए स्वचालित प्रणालियों का उपयोग करना"
+      ],
+      "disclaimer": "5. वारंटी का अस्वीकरण",
+      "disclaimerText": "प्लेटफॉर्म किसी भी प्रकार की वारंटी के बिना \"जैसा है\" प्रदान किया जाता है। हम गारंटी नहीं देते कि सेवा निर्बाध, सुरक्षित या त्रुटि-मुक्त होगी। प्लेटफॉर्म के आपके उपयोग से उत्पन्न होने वाली किसी भी क्षति के लिए हम जिम्मेदार नहीं हैं।",
+      "changes": "6. शर्तों में परिवर्तन",
+      "changesText": "हम किसी भी समय इन शर्तों को संशोधित करने का अधिकार सुरक्षित रखते हैं। हम उपयोगकर्ताओं को ईमेल या प्लेटफॉर्म के माध्यम से महत्वपूर्ण परिवर्तनों की सूचना देंगे। परिवर्तनों के बाद सेवा का निरंतर उपयोग नई शर्तों की स्वीकृति का गठन करता है।",
+      "contact": "7. संपर्क",
+      "contactText": "यदि आपको इन सेवा की शर्तों के बारे में कोई प्रश्न है, तो कृपया हमसे संपर्क करें:",
+      "contactEmail": "legal@algoarcadelab.com"
+    },
+    "cancellation": {
+      "title": "रद्दीकरण, रिफंड नीति और शर्तें",
+      "lastUpdated": "अंतिम अपडेट: जनवरी 2026",
+      "importantNotice": "महत्वपूर्ण सूचना",
+      "importantNoticeText": "कृपया खरीदारी करने से पहले इस नीति को ध्यान से पढ़ें। Algo Arcade Lab को किए गए सभी भुगतान अंतिम हैं और वापसी योग्य नहीं हैं।",
+      "noRefunds": "1. ऑप्ट-आउट या रद्दीकरण पर कोई रिफंड नहीं",
+      "refundPolicy": "रिफंड नीति",
+      "refundPolicyText": "एक बार सब्सक्रिप्शन खरीदा और सक्रिय होने के बाद, किसी भी परिस्थिति में कोई रिफंड जारी नहीं किया जाएगा।",
+      "finalPayments": "अंतिम भुगतान",
+      "finalPaymentsText": "पूर्ण पहुंच, पाठ्यक्रम या किसी भी अन्य भुगतान सेवाओं के लिए किए गए सभी भुगतान अंतिम हैं और वापसी योग्य नहीं हैं।",
+      "serviceShutdown": "सेवा बंद",
+      "serviceShutdownText": "सेवाओं के अप्रत्याशित या अचानक बंद होने की स्थिति में, Algo Arcade Lab उपयोगकर्ताओं द्वारा किए गए किसी भी शुल्क, सब्सक्रिप्शन या भुगतान के लिए रिफंड प्रदान करने के लिए बाध्य नहीं होगा। इसमें शामिल हैं, लेकिन इन तक सीमित नहीं:",
+      "serviceShutdownItems": [
+        "पूर्ण पहुंच सब्सक्रिप्शन शुल्क",
+        "पाठ्यक्रम भुगतान",
+        "कोई भी अन्य भुगतान प्रस्ताव"
+      ],
+      "cancellationPolicy": "रद्दीकरण नीति",
+      "cancellationPolicyText": "सभी उपयोगकर्ताओं के लिए निष्पक्षता और स्थिरता सुनिश्चित करने के लिए रद्दीकरण या मध्य-अवधि ऑप्ट-आउट की अनुमति नहीं है।",
+      "liability": "2. दायित्व की सीमा",
+      "liabilityText": "Algo Arcade Lab किसी भी प्रत्यक्ष, अप्रत्यक्ष, आकस्मिक, परिणामी, या दंडात्मक नुकसान के लिए उत्तरदायी नहीं होगा जो इससे उत्पन्न हो सकते हैं:",
+      "liabilityItems": [
+        "प्लेटफॉर्म का उपयोग या उपयोग करने में असमर्थता",
+        "सेवा में रुकावट",
+        "सेवाओं का अचानक बंद होना या बंद होना"
+      ],
+      "liabilityNote": "यह सभी उपयोगकर्ताओं पर लागू होता है, जिसमें सक्रिय भुगतान सब्सक्रिप्शन वाले उपयोगकर्ता भी शामिल हैं।",
+      "optOut": "3. सब्सक्रिप्शन ऑप्ट-आउट अधिसूचना",
+      "optOutText": "यदि कोई उपयोगकर्ता खरीद के बाद स्वेच्छा से सेवा का उपयोग बंद कर देता है, तो शेष सब्सक्रिप्शन अवधि के लिए कोई रिफंड जारी नहीं किया जाएगा।",
+      "optOutNote": "सब्सक्रिप्शन प्रबंधन की जिम्मेदारी उपयोगकर्ता पर है।",
+      "accountMisuse": "4. एकाधिक IP / खाता दुरुपयोग",
+      "accountActivity": "खाता गतिविधि",
+      "accountActivityText": "अत्यधिक या संदिग्ध लॉगिन गतिविधि प्रदर्शित करने वाले खाते, जिसमें असामान्य रूप से उच्च संख्या में विभिन्न IP पतों से पहुंच शामिल है, हो सकते हैं:",
+      "accountActivityItems": [
+        "फ्लैग किए गए",
+        "प्रतिबंधित",
+        "बिना रिफंड के निलंबित"
+      ],
+      "protectionMeasure": "सुरक्षा उपाय",
+      "protectionMeasureText": "यह उपाय प्लेटफॉर्म को साझा खाता दुरुपयोग और अनधिकृत पहुंच से बचाता है।",
+      "blacklist": "5. ब्लैकलिस्ट किए गए खाते – सख्त कार्रवाई",
+      "blacklistText": "नियम और शर्तों का उल्लंघन करने वाले उपयोगकर्ताओं को ब्लैकलिस्ट किया जा सकता है। परिणामों में शामिल हैं:",
+      "blacklistItems": [
+        "खाते का स्थायी निलंबन",
+        "सभी संबंधित सेवाओं तक पहुंच की हानि",
+        "भविष्य के नामांकन या प्लेटफॉर्म उपयोग के लिए अयोग्यता"
+      ],
+      "blacklistNote": "ये कार्रवाइयां सेवा अखंडता और उपयोगकर्ता सुरक्षा बनाए रखने के लिए की जाती हैं।",
+      "legalAction": "6. गंभीर उल्लंघनों के लिए कानूनी कार्रवाई",
+      "legalActionText": "Algo Arcade Lab निम्नलिखित में शामिल व्यक्तियों या खातों के खिलाफ कानूनी कार्यवाही शुरू करने का अधिकार सुरक्षित रखता है:",
+      "legalActionItems": [
+        "धोखाधड़ी गतिविधियां",
+        "प्लेटफॉर्म का दुरुपयोग या शोषण",
+        "सामग्री का पुनर्वितरण या अनधिकृत साझाकरण",
+        "सेवा, प्लेटफॉर्म या अन्य उपयोगकर्ताओं को नुकसान पहुंचाने वाली कोई भी कार्रवाई"
+      ],
+      "legalActionNote": "ऐसी कार्रवाइयों में लागू कानूनों के अनुसार अनुमत संबंधित अधिकारियों को घटनाओं की रिपोर्ट करना शामिल हो सकता है।",
+      "contactUs": "हमसे संपर्क करें",
+      "contactUsText": "यदि आपको इस रद्दीकरण नीति के बारे में कोई प्रश्न है, तो कृपया हमसे संपर्क करें:",
+      "contactEmail": "support@algoarcadelab.com"
+    },
+    "cheatsheet": {
+      "title": "एल्गोरिदम चीटशीट",
+      "comingSoon": "जल्द आ रहा है",
+      "subtitle": "हम व्यापक चीटशीट तैयार कर रहे हैं जो आपको कोडिंग इंटरव्यू के दौरान एल्गोरिदम, समय जटिलता और मुख्य पैटर्न को जल्दी से संदर्भित करने में मदद करेंगी।",
+      "feature1Title": "समय और स्पेस जटिलता",
+      "feature1Text": "सभी एल्गोरिदम के Big O नोटेशन के लिए त्वरित संदर्भ",
+      "feature2Title": "पैटर्न पहचान",
+      "feature2Text": "सामान्य समस्या पैटर्न और कौन सा दृष्टिकोण कब उपयोग करना है",
+      "feature3Title": "कोड टेम्प्लेट",
+      "feature3Text": "कई भाषाओं में उपयोग के लिए तैयार कोड स्निपेट",
+      "notifyTitle": "तैयार होने पर सूचित करें",
+      "notifyText": "जब हमारी एल्गोरिदम चीटशीट लॉन्च हो तो पहले एक्सेस पाने के लिए हमारी प्रतीक्षा सूची में शामिल हों।",
+      "emailPlaceholder": "अपना ईमेल दर्ज करें",
+      "notifyButton": "मुझे सूचित करें",
+      "backHome": "होम पर वापस जाएं"
+    }
   }
 }
